--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="jumbotron text-center">
       <div class="test">
         <p>888poker is made to play with</p>
-        <p class="text fw-bold">$88 Free bonus</p>
+        <h1 class="" style="color: yellow">$88 Free bonus</h1>
         <p>NO DEPOSIT NEEDED</p>
         <a class="button">Get Started</a>
       </div>
@@ -211,7 +211,8 @@
 
     <div id="usersList" class="container-fluid text-center bg-grey">
       <h2>Users</h2>
-      <h4>List of completed users</h4>
+      <h4 class="" id="generate">Please click 'Get username' to generate list of users. Thank you.</h4>
+      <p></p>
       <ul class="people">
         <li id="person-list"></li>
       </ul>
