--- a/index.html
+++ b/index.html
@@ -18,68 +18,68 @@
       const dataArray = [
         {
           id: 1,
-          title: 'sunt aut facere repellat provident o',
-          body: 'quia et suscipit suscipit recusandae consequuntur expedita et cum reprehenderit molestiae ut ut quas totam',
+          title: 'Welcome to Casino Royale',
+          body: 'Feel the thrill of world-class casino games and entertainment.',
           thumbnailUrl: 'https://via.placeholder.com/150/92c952',
         },
         {
           id: 2,
-          title: 'qui est esse',
-          body: 'est rerum tempore vitae sequi sint nihil reprehenderit dolor beatae ea dolores neque fugiat blanditiis',
+          title: 'Slots Galore',
+          body: 'Try your luck at our wide selection of slot machines.',
           thumbnailUrl: 'https://via.placeholder.com/150/d32776',
         },
         {
           id: 3,
-          title: 'ea molestias quasi exercitationem ',
-          body: 'et iusto sed quo iure voluptatem occaecati omnis eligendi aut ad voluptatem doloribus vel accusantium quis',
+          title: 'Table Games',
+          body: 'Play popular table games like blackjack, roulette, and poker.',
           thumbnailUrl: 'https://via.placeholder.com/150/f66b97',
         },
         {
           id: 4,
-          title: 'eum et est occaecati',
-          body: 'ullam et saepe reiciendis voluptatem adipisci sit amet autem assumenda provident rerum culpa quis hic voluptatem rerum illo velit',
+          title: 'Luxurious Accommodations',
+          body: 'Stay in our elegant hotel rooms and suites with stunning views.',
           thumbnailUrl: 'https://via.placeholder.com/150/56a8c2',
         },
         {
           id: 5,
-          title: 'nesciunt quas odio',
-          body: 'repudiandae veniam quaerat sunt sed alias aut fugiat sit autem sed est voluptatem omnis possimus esse voluptatibus',
+          title: 'Fine Dining',
+          body: 'Savor exquisite dishes at our gourmet restaurants.',
           thumbnailUrl: 'https://via.placeholder.com/150/b0f7cc',
         },
         {
           id: 6,
-          title: 'dolorem eum magni eos aperiam quia',
-          body: 'ut aspernatur corporis harum nihil quis provident sequi mollitia nobis aliquid molestiae perspiciatis et ea',
+          title: 'Live Entertainment',
+          body: 'Enjoy live music, shows, and events throughout the week.',
           thumbnailUrl: 'https://via.placeholder.com/150/54176f',
         },
         {
           id: 7,
-          title: 'magnam facilis autem',
-          body: 'dolore placeat quibusdam ea quo vitae magni quis enim qui quis quo nemo aut saepe quidem repellat excepturi',
+          title: 'VIP Rewards',
+          body: 'Join our loyalty program for exclusive perks and rewards.',
           thumbnailUrl: 'https://via.placeholder.com/150/51aa97',
         },
         {
           id: 8,
-          title: 'dolorem dolore est ipsam',
-          body: 'dignissimos aperiam dolorem qui eum facilis quibusdam animi sint suscipit qui sint possimus cum aut vitae',
+          title: '24/7 Customer Support',
+          body: 'Our friendly customer support team is available around the clock.',
           thumbnailUrl: 'https://via.placeholder.com/150/810b14',
         },
         {
           id: 9,
-          title: 'nesciunt iure omnis dolorem tempora',
-          body: 'consectetur animi nesciunt iure dolore enim quia ad veniam autem ut quam aut nobis et est aut quod aut provident voluptas',
+          title: 'Secure and Fair Gaming',
+          body: 'We prioritize your safety and offer fair gaming experiences.',
           thumbnailUrl: 'https://via.placeholder.com/150/1ee8a4',
         },
         {
           id: 10,
-          title: 'optio molestias id quia eum',
-          body: 'quo et expedita modi cum officia vel magni doloribus qui repudiandae vero nisi sit quos veniam quod sed accusamus veritatis error',
+          title: 'Win Big Jackpots',
+          body: 'Get a chance to win life-changing jackpots in our casino.',
           thumbnailUrl: 'https://via.placeholder.com/150/66b7d2',
         },
         {
           id: 11,
-          title: 'et ea vero quia laudantium autem',
-          body: 'delectus reiciendis molestiae occaecati non minima eveniet qui voluptatibus accusamus in eum beatae sit vel qui neque',
+          title: 'Responsible Gaming',
+          body: 'We promote responsible gaming for a positive gambling experience.',
           thumbnailUrl: 'https://via.placeholder.com/150/197d29',
         },
       ];
@@ -135,7 +135,7 @@
     <div id="about" class="container-fluid bg-grey text-center">
       <div class="row">
         <div class="col-sm-12">
-          <h2>Hello <span id="user">{User}</span></h2>
+          <h2>Hello <span id="user"></span></h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -164,51 +164,51 @@
             <div class="col-md-3" id="col"></div>
           </div>
         </div>
+        <script>
+          function appendData(data) {
+            // Check if the main container element exists
+            const mainContainer = document.getElementById('col');
+            if (!mainContainer) {
+              console.error("'wrapper' id can't be not found.");
+              return; // Exit the function
+            }
+            for (var i = 0; i < data.length; i++) {
+              let card = document.createElement('div');
+              card.className = 'card';
+              card.id = 'card';
+
+              let img = document.createElement('img');
+              img.className = 'card-img-top';
+              img.src = `${data[i].thumbnailUrl}`;
+
+              let cardBody = document.createElement('div');
+              cardBody.className = 'card-body';
+
+              let cardTitle = document.createElement('h5');
+              cardTitle.className = 'card-title';
+              cardTitle.innerHTML = `TITLE: ${data[i].title}`;
+
+              let cardText = document.createElement('p');
+              cardText.className = 'card-text';
+              cardText.innerHTML = `${data[i].body}`;
+
+              let anchor = document.createElement('a');
+              anchor.className = 'btn btn-primary';
+              anchor.href = `https://beta-ochre.vercel.app/`;
+              anchor.innerHTML = `Go Somewhere`;
+
+              mainContainer.appendChild(card).appendChild(img);
+              card
+                .appendChild(cardBody)
+                .appendChild(cardTitle)
+                .appendChild(cardText)
+                .appendChild(anchor);
+            }
+          }
+
+          appendData(firstEight);
+        </script>
       </div>
-      <script>
-        function appendData(data) {
-          // Check if the main container element exists
-          const mainContainer = document.getElementById('col');
-          if (!mainContainer) {
-            console.error("'wrapper' id can't be not found.");
-            return; // Exit the function
-          }
-          for (var i = 0; i < data.length; i++) {
-            let card = document.createElement('div');
-            card.className = 'card';
-            card.id = 'card';
-
-            let img = document.createElement('img');
-            img.className = 'card-img-top';
-            img.src = `${data[i].thumbnailUrl}`;
-
-            let cardBody = document.createElement('div');
-            cardBody.className = 'card-body';
-
-            let cardTitle = document.createElement('h5');
-            cardTitle.className = 'card-title';
-            cardTitle.innerHTML = `TITLE: ${data[i].title}`;
-
-            let cardText = document.createElement('p');
-            cardText.className = 'card-text';
-            cardText.innerHTML = `${data[i].body}`;
-
-            let anchor = document.createElement('a');
-            anchor.className = 'btn btn-primary';
-            anchor.href = `https://beta-ochre.vercel.app/`;
-            anchor.innerHTML = `Go Somewhere`;
-
-            mainContainer.appendChild(card).appendChild(img);
-            card
-              .appendChild(cardBody)
-              .appendChild(cardTitle)
-              .appendChild(cardText)
-              .appendChild(anchor);
-          }
-        }
-
-        appendData(firstEight);
-      </script>
     </div>
 
     <div id="usersList" class="container-fluid text-center bg-grey">
