--- a/index.html
+++ b/index.html
@@ -225,58 +225,7 @@
     <footer id="footer" class="container-fluid text-center">
       <h2>Footer</h2>
       <p>User with Zip Code that starts with 5</p>
-      <ul class="zipFive">
-        <li id="zip-five"></li>
-      </ul>
-      <!-- <div class="container">
-        <div class="row">
-           First Row
-          <div class="col-md-3">
-            <div class="card">
-              <div class="card-body">Card 1</div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <div class="card-body">Card 2</div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <div class="card-body">Card 3</div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <div class="card-body">Card 4</div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          Second Row 
-          <div class="col-md-3">
-            <div class="card">
-              <div class="card-body">Card 5</div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <div class="card-body">Card 6</div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <div class="card-body">Card 7</div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <div class="card-body">Card 8</div>
-            </div>
-          </div>
-        </div>
-      </div> -->
+      <ul class="zipFive" id="zip-five"></ul>
     </footer>
 
     <script>
