--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
             // Check if the main container element exists
             const mainContainer = document.getElementById('col');
             if (!mainContainer) {
-              console.error("'wrapper' id can't be not found.");
-              return; // Exit the function
+              console.error("'col' id can't be not found.");
+              return; // Exit
             }
             for (var i = 0; i < data.length; i++) {
               let card = document.createElement('div');
